--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
-  "name": "app",
-  "private": "true",
-  "dependencies": {
-    "@hotwired/stimulus": "^3.2.1",
-    "@hotwired/turbo-rails": "^7.3.0",
-    "webpack": "^5.85.1",
-    "webpack-cli": "^5.1.3"
-  },
-  "scripts": {
-    "build": "webpack --config webpack.config.js"
-  }
+	"name": "app",
+	"private": "true",
+	"dependencies": {
+		"@babel/core": "^7.22.1",
+		"@babel/preset-env": "^7.22.4",
+		"@babel/preset-react": "^7.22.3",
+		"@babel/preset-typescript": "^7.21.5",
+		"@hotwired/stimulus": "^3.2.1",
+		"@hotwired/turbo-rails": "^7.3.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"webpack": "^5.85.1",
+		"webpack-cli": "^5.1.3"
+	},
+	"scripts": {
+		"build": "webpack --config webpack.config.js"
+	},
+	"babel": {
+		"presets": [
+			"@babel/preset-env",
+			"@babel/preset-react",
+			"@babel/preset-typescript"
+		]
+	},
+	"devDependencies": {
+		"babel-loader": "^9.1.2"
+	}
 }
