--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
 		]
 	},
 	"devDependencies": {
-		"babel-loader": "^9.1.2"
+		"babel-loader": "^9.1.2",
+		"stylelint": "^13.13.1",
+		"stylelint-config-standard": "^21.0.0",
+		"stylelint-csstree-validator": "^1.9.0",
+		"stylelint-scss": "^3.21.0"
 	}
 }
