--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@babel/preset-typescript": "^7.21.5",
 		"@hotwired/stimulus": "^3.2.1",
 		"@hotwired/turbo-rails": "^7.3.0",
+		"axios": "^1.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"webpack": "^5.85.1",
