--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
 		"@hotwired/turbo-rails": "^7.3.0",
 		"@reduxjs/toolkit": "^1.9.5",
 		"axios": "^1.4.0",
+		"localforage": "^1.10.0",
+		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.7",
+		"react-router-dom": "^6.12.0",
+		"sort-by": "^1.2.0",
 		"webpack": "^5.85.1",
 		"webpack-cli": "^5.1.3"
 	},
